# tee-as-transformation

./: .cursorrules  .gitignore  ADAPTER_REORGANIZATION_SUMMARY.md  ADAPTER_SYSTEM_SUMMARY.md  CODE_REVIEW.md  ENGINE_CLEANUP_SUMMARY.md  EXECUTION_ENGINE_README.md  LEGACY_TYPING_ANALYSIS.md  METADATA_EXAMPLE.md  README.md  TEST_TYPING_REVIEW.md  cleanup_old_docs.py  debug_cli.py  debug_regex.py  example_report.md  main.py  mkdocs.yml  parser_reorganization_diagram.md  pyproject.toml
docs/: README.md  build_docs.py  parser-model-flow.md
docs/api-reference/: README.md  functions.md  models.md
docs/api-reference/adapters/: README.md
docs/api-reference/engine/: README.md
docs/api-reference/parser/: README.md
docs/development/: adapter-comparison.md  additional-tests-needed.md  architecture.md  code-reorganization-summary.md  contributing.md  dbt-importer-missing-items.md  dependency-extraction-analysis.md  file-refactoring-proposal.md  function-extraction-improvement.md  ots-parsedmodel-comparison.md  ots-transformer-refactoring-options.md  ots-workflow-review.md  parser-refactoring-plan.md  phase2-review.md  phase3-summary.md  phase4-summary.md  refactoring-opportunities.md  simplification-analysis.md  snowflake-adapter-refactoring-options.md  udf-design-decisions.md  udf-implementation-plan.md
docs/development/dbt-importer-issues/: 01-freshness-tests.md  02-source-metadata.md  03-missing-incremental-strategies.md  04-jinja2-support.md  05-spark-support.md  06-on-schema-change.md
docs/development/implementation-guides/: e2e_tests_explained.md  on_schema_change_actions.md  on_schema_change_code_review.md  on_schema_change_execution_flow.md  on_schema_change_implementation.md  on_schema_change_ots_alignment.md  on_schema_change_questions.md  postgresql_adapter_analysis.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/user-guide/: cli-reference.md  data-quality-tests.md  database-adapters.md  dbt-import-limitations.md  dbt-import.md  documentation-site.md  execution-engine.md  functions.md  incremental-materialization.md  overview.md  seeds.md  sql-dialect-conversion.md  tags-and-metadata.md
docs/user-guide/examples/: README.md  basic-usage.md  functions.md  incremental-example.md  testing-example.md
examples/: README.md  metadata_detection_examples.py
examples/jaffle-shop/: packages.yml
examples/my_test/: project.toml
examples/t_project/: project.toml
examples/t_project/output/: dependency_graph.json  dependency_graph.mmd  dependency_report.md  parsed_models.json
examples/t_project/seeds/: source_table.csv  status_codes.csv  users.csv
examples/t_project/tests/: check_minimum_rows.sql  check_name_length.py  check_name_length.sql  column_not_negative.sql  example_custom_test.sql  generate_table_tests.py  test_my_first_table.sql
examples/t_project_sno/: project.toml
examples/t_project_sno/output/: dependency_graph.json  dependency_graph.mmd  dependency_report.md  parsed_models.json  t_project_sno__my_schema.ots.json
examples/t_project_sno/tests/: check_no_null_ids.py  generate_table_tests.py
t_project/: project.toml
t_project/models/my_schema/: advanced_models.py  my_first_table.py  my_first_table.sql  my_second_table.sql  my_third_table.sql
t_project/output/: dependency_graph.json  dependency_graph.mmd  dependency_report.md  parsed_models.json
t_project_sno/: project.toml
t_project_sno/models/my_schema/: my_first_table.py  my_second_table.py
t_project_sno/output/: dependency_graph.json  dependency_graph.mmd  dependency_report.md  parsed_models.json
tee/: __init__.py  compiler.py  executor.py
tee/adapters/: __init__.py  base.py  registry.py  testing.py
tee/adapters/base/: __init__.py  config.py  core.py  metadata.py  sql.py  testing.py
tee/adapters/bigquery/: __init__.py  adapter.py
tee/adapters/duckdb/: __init__.py  adapter.py
tee/adapters/postgresql/: __init__.py  adapter.py
tee/adapters/snowflake/: __init__.py  adapter.py
tee/cli/: __init__.py  context.py  main.py  selection.py  utils.py
tee/cli/commands/: __init__.py  build.py  compile.py  debug.py  docs.py  help.py  import.py  import_cmd.py  init.py  ots.py  parse.py  run.py  seed.py  test.py
tee/engine/: README_ADAPTERS.md  __init__.py  config.py  connection_manager.py  example_config.toml  example_usage.py  execution_engine.py  executor.py  incremental_executor.py  incremental_state.py  model_state.py  seeds.py  state_manager.py
tee/executor_helpers/: __init__.py  build_helpers.py  shared_helpers.py
tee/importer/: __init__.py  detector.py
tee/parser/: __init__.py
tee/testing/: __init__.py  base.py  executor.py  python_test.py  sql_test.py  standard_tests.py  test_builder.py  test_decorator.py  test_discovery.py
tee/typing/: __init__.py  function.py  metadata.py  model.py
test_project/output/: dependency_graph.json  dependency_graph.mmd  dependency_report.md
tests/: .motherduck_config.json.example  README.md  conftest.py  run_incremental_tests.py  test_project_parser.py  test_python_variable_support.py
tests/adapters/: __init__.py  test_duckdb_incremental.py  test_function_adapter_interface.py  test_metadata_propagation.py  test_snowflake_schema_tags.py  test_snowflake_tags.py
tests/cli/: __init__.py  test_cli_help_behavior.py  test_selection.py
tests/compiler/: test_compiler.py
tests/engine/: __init__.py  test_incremental_adapter_interface.py  test_incremental_executor.py  test_schema_tags.py  test_seeds.py  test_tag_extraction.py
tests/executor/: __init__.py  test_build_models.py
tests/executor_helpers/: test_shared_helpers.py
tests/importer/: __init__.py  test_detector.py
tests/parser/: __init__.py
tests/testing/: __init__.py  test_base.py  test_executor.py  test_function_test_executor.py  test_python_test.py  test_python_test_discovery.py  test_query_generation.py  test_sql_test.py  test_standard_tests.py  test_test_builder.py  test_test_decorator.py  test_test_definition_parser.py  test_test_discovery.py  test_unused_test_checker.py
tests/typing/: __init__.py  test_function_metadata.py
(+307 files in other folders)
