[project]
name = "tee"
version = "0.1.0"
description = "Tee - Transform, Extract, Execute (and t-shirts!)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.1",
    "pydantic>=2.12.2",
    "pyyaml>=6.0.3",
    "snowflake-connector-python>=4.0.0",
    "sqlglot[rs]>=27.27.0",
    "toml>=0.10.2",
]

[project.scripts]
tcli = "tee.cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tee*"]
exclude = ["tests*", "t_project*", "test_project*", "site*"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "vulture>=2.14",
]

[tool.coverage.run]
source = ["tee"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
addopts = "--cov=tee --cov-report=term-missing --cov-report=html"
