[project]
name = "tee"
version = "0.1.0"
description = "Tee - Transform, Extract, Execute (and t-shirts!)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.1",
    "pydantic>=2.12.2",
    "pyyaml>=6.0.3",
    "snowflake-connector-python>=4.0.0",
    "sqlglot[rs]>=27.27.0",
    "toml>=0.10.2",
]

[project.scripts]
tcli = "tee.cli.main:main"
t4t = "tee.cli.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tee*"]
exclude = ["tests*", "examples*", "test_project*", "site*"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
    "vulture>=2.14",
]

[tool.coverage.run]
source = ["tee"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
addopts = "--cov=tee --cov-report=term-missing --cov-report=html"
# Exclude project directories from test discovery (these are example/demo projects, not test suites)
testpaths = ["tests"]
norecursedirs = ["examples", "test_project", ".venv", "venv", "__pycache__", ".git", "htmlcov", "site"]
filterwarnings = [
    # Suppress DuckDB deprecation warnings about _UnionGenericAlias (Python 3.14 beta issue)
    # These are internal DuckDB library warnings, not issues with our code
    # Match by module path
    "ignore::DeprecationWarning:duckdb",
    # Match by message content
    "ignore:_UnionGenericAlias is deprecated.*:DeprecationWarning",
]

[tool.ruff]
# Enable linting and formatting
target-version = "py314"
line-length = 100

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false
# Automatic string normalization
line-ending = "auto"

[tool.ruff.lint]
# Enable linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site",
    "venv",
    "htmlcov",
    "*.egg-info",
]
